CRUD Scaffolding criado

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-c0c3fb55-aa4d-457d-987c-cc28048e073f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
