Passando metodos para async task

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "server=localhost;userid=Gabriel;password=123456;database=saleswebmvcappdb"
+    "SalesWebMVCContext": "server=localhost;userid=developer;password=123456;database=saleswebmvcappdb"
   }
 }
